--- a/urthehero/charts/mysql/values.yaml
+++ b/urthehero/charts/mysql/values.yaml
@@ -16,24 +16,27 @@ testFramework:
   image: "dduportal/bats"
   tag: "0.4.0"
 
+nameOverride: ""
+fullnameOverride: "urthehero-mysql"
+
 ## Specify password for root user
 ##
 ## Default: random 10 character string
-# mysqlRootPassword: testing
+mysqlRootPassword: tdevilleduc
 
 ## Create a database user
 ##
-# mysqlUser:
+mysqlUser: testuser
 ## Default: random 10 character string
-# mysqlPassword:
+mysqlPassword: test123
 
 ## Allow unauthenticated access, uncomment to enable
 ##
-# mysqlAllowEmptyPassword: true
+mysqlAllowEmptyPassword: true
 
 ## Create a database
 ##
-# mysqlDatabase:
+mysqlDatabase: test
 
 ## Specify an imagePullPolicy (Required)
 ## It's recommended to change this to 'Always' if the image tag is 'latest'
